# small_projects

./: .gitignore  README.md
List/: README.md  makefile
List/incl/: List.hpp
List/tests/: List_tests.cpp  tests_main.cpp
Tree/incl/: Tree.hpp
boost/asio/: CMakeLists.txt  tut1_steady_timer.cpp
boost/process/: CMakeLists.txt  hello_world.cpp  tut1a_basics.cpp  tut1b_launch_functions.cpp  tut1c_errors.cpp  tut1d_streams.cpp  tut2_asynchio.cpp  tut2a_pipestreams.cpp  tut2c_groups.cpp  tut2d_environment.cpp  tut3a_extensions_basics.cpp  tut3b_extensions_inheritance.cpp  tut3d_extensions_async.cpp  tut3e_error_handling.cpp
cereal_tests/: archive_blob.xml  makefile  xml_archive.xml
cereal_tests/incl/: example.hpp
cereal_tests/src/: example.cpp  main.cpp
cereal_tests/tests/: tests_blabla.cpp  tests_main.cpp  testsheader.hpp
concepts/: CMakeLists.txt  hello_concepts.cpp
patterns/: CMakeLists.txt  builder.cpp  crtp.cpp  crtp_2.cpp  crtp_3.cpp  crtp_crtp.cpp  crtp_tree.cpp  crtp_tree_virtual.cpp  inserters.cpp  iterator_adaptor.cpp  iterator_facade.cpp  iterator_facade_2.cpp  mixin_virtual.cpp  mixin_virtual_2.cpp  observer_patter_buildin.cpp  observer_pattern.cpp  polymorphic_template.cpp  transform_iterator.cpp  transform_iterator2.cpp  transform_iterator3.cpp  virtual_copy.cpp
random_stuff/: CMakeLists.txt  func_pointers.cpp  literals.cpp  mixin_virtual.cpp  observer_patter_buildin.cpp  observer_pattern.cpp  polymorphic_template.cpp  regex_smatch.cpp  regex_token_1.cpp  structured_bindings.cpp  virtual_copy.cpp
random_stuff/filesystem/: CMakeLists.txt  ex1.cpp  parallel_dir_iter.cpp  path_info.cpp  tut2.cpp  tut3.cpp  tut4.cpp  tut5.cpp
random_stuff/std_filesystem/: CMakeLists.txt  parallel_dir_iter.cpp
wxWidgets/hello_world/: CMakeLists.txt
wxWidgets/hello_world/src/: main.cpp
wxWidgets/menus_toolbar/: CMakeLists.txt
wxWidgets/menus_toolbar/src/: main.cpp
wxWidgets/simple/: CMakeLists.txt
wxWidgets/simple/src/: main.cpp
wxWidgets/sizers/: CMakeLists.txt
wxWidgets/sizers/src/: boxsizer_align.cpp  boxsizer_border.cpp  boxsizer_complex.cpp  flexgridsizer.cpp  gridsizer.cpp
wxWidgets/widget_communicate/: CMakeLists.txt
wxWidgets/widget_communicate/src/: main.cpp
